@@ -5,34 +5,21 @@ import com.googee.googeeserver.models.media.Media;
 import com.googee.googeeserver.utils.files.MediaUtils;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.log4j.Log4j2;
-import org.apache.commons.io.FileUtils;
-import org.apache.commons.io.IOUtils;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.io.ByteArrayResource;
-import org.springframework.core.io.ClassPathResource;
 import org.springframework.core.io.Resource;
 import org.springframework.data.redis.core.HashOperations;
-import org.springframework.http.HttpHeaders;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
 
-import java.io.File;
 import java.io.IOException;
-import java.io.InputStream;
 import java.net.URISyntaxException;
 import java.nio.file.Files;
-import java.nio.file.OpenOption;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.security.DigestInputStream;
-import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
-import java.util.Arrays;
-
-import static org.apache.commons.io.FileUtils.copyFile;
-import static org.apache.commons.io.FileUtils.readFileToString;
+chats + profile
 import static org.springframework.http.HttpStatus.NOT_FOUND;
 
 @Log4j2
@@ -50,7 +37,7 @@ public class MediaResource {
 	public ResponseEntity<Resource> fetchMedia(@RequestParam("mediaKey") String mediaKey) throws IOException, URISyntaxException {
 		Media media = mediaLocation.get(KeyStorage.MEDIA.getTag(), mediaKey);
 		if (media != null) {
-			Path path = Paths.get(getClass().getResource(media.getPath()).toURI());
+			Path path = Path.of(media.getPath());
 			ByteArrayResource resource = new ByteArrayResource(Files.readAllBytes(path));
 			return ResponseEntity.ok().body(resource);
 		}
